<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="fragment"
            type="com.mczuba.blooddonorcompanion.vm.greeting.GreetFinalFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
                <ImageView
                    app:tint="@color/colorPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="192dp"
                    android:src="@drawable/ic_baseline_done_24"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/greet_allready"
                    android:layout_weight="0"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/greet_youcanbegin"
                    android:layout_weight="0"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>
        <Button
            android:id="@+id/button1"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|right"
            android:layout_margin="16dp"
            android:onClick="@{() -> fragment.click()}"
            android:text="@string/greet_begin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>