<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewmodel"
            type="com.mczuba.blooddonorcompanion.vm.editors.NewRecordViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/base_margin"
                app:strokeColor="@color/colorPrimaryDark"
                app:strokeWidth="1dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:animateLayoutChanges="true"
                        android:orientation="vertical"
                        android:paddingHorizontal="16dp"
                        android:paddingTop="16dp"
                        android:paddingBottom="16dp">
                        <!-- Title, secondary and supporting text -->
                        <TextView
                            android:id="@+id/newrecord_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/donation_new"
                            android:textAppearance="?attr/textAppearanceHeadline6" />
                        <!-- Donation Type -->
                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:hint="@string/donation_type"
                            app:startIconDrawable="@drawable/blood_bag">
                            <AutoCompleteTextView
                                android:singleLine="true"
                                android:id="@+id/editDonationType"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:inputType="none" />
                        </com.google.android.material.textfield.TextInputLayout>
                        <!-- Donation Date -->
                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:hint="@string/donation_date"
                            app:startIconDrawable="@drawable/calendar_star">
                            <AutoCompleteTextView
                                android:id="@+id/newrecord_date"
                                android:singleLine="true"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:inputType="none"
                                android:paddingStart="12dp"
                                android:paddingEnd="8dp"
                                android:text="@{@string/format_any(viewmodel.formattedDate)}" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <!-- Location -->
                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:hint="@string/donation_location"
                            app:startIconDrawable="@drawable/ic_baseline_location_on_24">

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:inputType="textAutoCorrect"
                                android:text="@={viewmodel.donation.location}" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginBottom="8dp"
                            android:background="?android:attr/listDivider" />

                        <!-- details -->
                        <LinearLayout
                            android:id="@+id/layout_details"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:orientation="vertical"
                            android:visibility="gone"
                            tools:visibility="visible">

                            <com.google.android.material.textfield.TextInputLayout
                                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/donation_note"
                                app:startIconDrawable="@drawable/file_document_edit_outline">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:inputType="textLongMessage|textAutoCorrect|textMultiLine"
                                    android:text="@={viewmodel.donation.note}" />
                            </com.google.android.material.textfield.TextInputLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp">

                                <com.google.android.material.textfield.TextInputLayout
                                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_marginRight="8dp"
                                    android:layout_weight="1"
                                    android:hint="@string/donation_arm"
                                    app:startIconDrawable="@drawable/hand_right">
                                    <AutoCompleteTextView
                                        android:singleLine="true"
                                        android:id="@+id/editUsedArm"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:inputType="none" />
                                </com.google.android.material.textfield.TextInputLayout>

                                <com.google.android.material.textfield.TextInputLayout

                                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    app:placeholderText="5-15"
                                    app:startIconDrawable="@drawable/timer_outline"
                                    android:hint="@string/donation_duration"
                                    app:suffixText="min">
                                    <com.google.android.material.textfield.TextInputEditText
                                        android:singleLine="true"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:inputType="number"
                                        android:text="@={viewmodel.donation.duration}" />
                                </com.google.android.material.textfield.TextInputLayout>
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp">

                                <com.google.android.material.textfield.TextInputLayout
                                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_marginRight="8dp"
                                    android:layout_weight="1"
                                    android:enabled="false"
                                    android:hint="@string/donation_amount"
                                    app:startIconDrawable="@drawable/beaker_outline"
                                    app:suffixText="ml">

                                    <com.google.android.material.textfield.TextInputEditText
                                        android:singleLine="true"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:text="@{viewmodel.formattedAmount}" />
                                </com.google.android.material.textfield.TextInputLayout>
                                <!-- Hemoglobin -->
                                <com.google.android.material.textfield.TextInputLayout
                                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:hint="@string/donation_hemoglobin"
                                    app:placeholderText="10-20"
                                    app:startIconDrawable="@drawable/diabetes"
                                    app:suffixText="g/dL">

                                    <com.google.android.material.textfield.TextInputEditText
                                        android:singleLine="true"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:inputType="numberDecimal"
                                        android:text="@={viewmodel.donation.hemoglobin}" />
                                </com.google.android.material.textfield.TextInputLayout>
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp">

                                <com.google.android.material.textfield.TextInputLayout
                                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_marginRight="8dp"
                                    android:layout_weight="1"
                                    android:hint="@string/donation_diastolic"
                                    app:placeholderText="60-90"
                                    app:suffixText="mmHg">

                                    <com.google.android.material.textfield.TextInputEditText
                                        android:singleLine="true"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:inputType="number"
                                        android:text="@={viewmodel.donation.diastolic}" />
                                </com.google.android.material.textfield.TextInputLayout>
                                <!-- Hemoglobin -->
                                <com.google.android.material.textfield.TextInputLayout
                                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:hint="@string/donation_systolic"
                                    app:placeholderText="80-120"
                                    app:suffixText="mmHg">
                                    <com.google.android.material.textfield.TextInputEditText
                                        android:singleLine="true"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:inputType="number"
                                        android:text="@={viewmodel.donation.systolic}" />
                                </com.google.android.material.textfield.TextInputLayout>
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>
                    <!-- Buttons -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingHorizontal="16dp"
                        android:paddingBottom="12dp">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/button_Expand"
                            style="?attr/borderlessButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:paddingLeft="32dp"
                            android:paddingRight="32dp"
                            android:text="Expand" />

                        <View
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:layout_weight="1" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/newrecord_submit"
                            style="?attr/materialButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="@{() -> viewmodel.submit()}"
                            android:paddingLeft="32dp"
                            android:paddingRight="32dp"
                            android:text="@string/donation_submit" />
                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>